dummysite/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: dummysites
  labels:
    name: dummysites
