dummysite/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dummysites
  name: dummysites-controller-svc
spec:
  type: ClusterIP
  selector:
    app: dummysites-controller
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
