dummysite/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: dummysites
  name: dummysites-ing
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: dummysites-controller-svc
              servicePort: 80
